Temporary fix for "white patch" fullscreen regression on OSX

This is a partial revert of https://codereview.chromium.org/1790663003
which introduced the bug. While it doesn't fix the regression in popups,
it will at least fix it for a normal browser window which is exposed to
more users.

BUG=604288

Review-Url: https://codereview.chromium.org/1967943002
Cr-Commit-Position: refs/heads/master@{#393027}

Former-commit-id: 07323681ff50e188b664ad404eaf3b04f9add5bc